[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/04B_30__.TTF" type="FontFile" id=1]
[ext_resource path="res://Menus/Options.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Minecraft.ttf" type="FontFile" id=3]

[sub_resource type="FontFile" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=4]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="FontFile" id=5]
size = 50
spacing_bottom = 8
font_data = ExtResource( 3 )

[sub_resource type="FontFile" id=2]
size = 40
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.380392, 0.164706, 0.164706, 1 )
self_modulate = Color( 0.164706, 0.290196, 0.960784, 1 )
anchor_right = 1.0
anchor_bottom = 1.007
offset_bottom = -1.88998

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -275.5
offset_top = 50.0
offset_right = 275.5
offset_bottom = 151.0
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_fonts/font = SubResource( 1 )
text = "Options"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -140.0
offset_right = 240.0
offset_bottom = -89.0
theme_override_fonts/font = SubResource( 4 )
text = "Volume:"
align = 1

[node name="SliderLabels" type="Label" parent="."]
offset_left = 646.0
offset_top = 461.0
offset_right = 821.0
offset_bottom = 644.0
theme_override_fonts/font = SubResource( 5 )
text = "Master:
Music:
SFX:"
align = 2
valign = 1

[node name="MasterSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -70.0
offset_right = 29.0
offset_bottom = -54.0
scale = Vector2( 2, 2 )
min_value = -60.0
max_value = -20.0
value = -20.0

[node name="MusicSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -8.0
offset_right = 29.0
offset_bottom = 8.0
scale = Vector2( 2, 2 )
min_value = 60.0
value = 100.0

[node name="SFXSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = 54.0
offset_right = 29.0
offset_bottom = 70.0
scale = Vector2( 2, 2 )
min_value = -10.0
max_value = 20.0
value = 20.0

[node name="Back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = 132.0
offset_right = 52.0
offset_bottom = 186.0
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = SubResource( 2 )
theme_override_styles/normal = SubResource( 3 )
text = "Back"

[connection signal="value_changed" from="MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
